Package of streaming functions moved to common module and HDFS protocol handler.